fixed name spacing

--- a/assets/css/stylerewrite.css
+++ b/assets/css/stylerewrite.css
@@ -12,6 +12,7 @@ body {
     font-size: 300%;
     padding-left: 75px;
     padding-right: 50px;
+    padding-top: 10px;
 }
 
 footer {
@@ -51,6 +52,7 @@ li a{
     background-color: #ffffff;
     margin: 0 auto;
     padding-bottom: 400px;
+    border: 1px solid #cccccc;
 }
 
 .maincontenttext{
@@ -67,7 +69,7 @@ li a{
     background-color: #4aaaa5;
     width: 200px;
     font-family: 'Georgia', Times, Times New Roman, serif;
-    margin-left: 250px;
+    margin-left: 200px;
     text-align: center;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -76,6 +78,8 @@ li a{
     float: left;
     font-size: 24pt;
     font-weight: bold;
+    padding-right: 25px;
+    padding-left: 25px;
 }
 
 .navlinks {
